--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,24 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
-
-pluginGroup = com.github.thelmuxkriovar.secretideplugin
-pluginName = Secret-IDE-Plugin
+pluginGroup=io.digiline.secretideplugin
+pluginName=Secret-IDE
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
-
+pluginVersion=0.0.1
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 211
-pluginUntilBuild = 213.*
-
+pluginSinceBuild=211
+pluginUntilBuild=213.*
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType = IC
-platformVersion = 2021.1.3
-
+platformType=IC
+platformVersion=2021.1.3
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
-
+platformPlugins=org.jetbrains.plugins.terminal
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
-
+javaVersion=11
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.4
-
+gradleVersion=7.4
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
-kotlin.stdlib.default.dependency = false
+kotlin.stdlib.default.dependency=false
