--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,34 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.thelmuxkriovar.secretideplugin</id>
-    <name>Secret-IDE-Plugin</name>
-    <vendor>thelmuxkriovar</vendor>
+    <id>io.digiline.secretideplugin</id>
+    <name>Secret-IDE</name>
+    <vendor url="https://digiline.io">digiline</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>org.jetbrains.plugins.terminal</depends>
+<!--    <depends>org.rust.lang</depends>-->
+<!--    <depends>org.toml.lang</depends>-->
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.thelmuxkriovar.secretideplugin.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.thelmuxkriovar.secretideplugin.services.MyProjectService"/>
+        <moduleType id="SCRT_NETWORK_MODULE_TYPE"
+                    implementationClass="io.digiline.secretideplugin.SecretIDEModuleType"/>
+        <toolWindow id="Build and Deploy" secondary="true" icon="AllIcons.General.Modified" anchor="right"
+                    factoryClass="io.digiline.secretideplugin.BuildAndDeployFactory"/>
+        <!--        <configurationType implementation="io.digiline.secretideplugin.makefileutils.MakefileConfigurationType"/>-->
+        <configurationType implementation="io.digiline.secretideplugin.SecretNetworkContractConfigurationType"/>
     </extensions>
 
-    <applicationListeners>
-        <listener class="com.github.thelmuxkriovar.secretideplugin.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
+    <!--    <extensionPoints>-->
+    <!--        <extensionPoint qualifiedName="io.digiline.secretideplugin.runConfigurationExtension"-->
+    <!--                        interface="io.digiline.secretideplugin.MakefileConfigurationExtension"-->
+    <!--                        dynamic="true"/>-->
+    <!--    </extensionPoints>-->
+
+    <description>
+        <![CDATA[
+            This plugin enables the developer to easily build, deploy and instantiate contracts on the Secret Network, and provides an integrated GUI to view the contracts you deployed and their instances.
+        ]]>
+    </description>
+
+
 </idea-plugin>
