--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,3 +1,2 @@
-name=My Plugin
-applicationService=Application service
-projectService=Project service: {0}
+name=Secret IDE
+templateName=Contract Template:
