latest version -- fix that weird issue with the ide being stuck during instantiation
WTF intellij? .handleAnyKeyPressed() and .close() were causing the issue... yeah... I don't get it either

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,8 +6,7 @@
 
     <depends>com.intellij.modules.platform</depends>
     <depends>org.jetbrains.plugins.terminal</depends>
-<!--    <depends>org.rust.lang</depends>-->
-<!--    <depends>org.toml.lang</depends>-->
+    <depends>org.rust.lang</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <moduleType id="SCRT_NETWORK_MODULE_TYPE"
